@@ -86,14 +86,12 @@
 #endif        /* GC_NETBSD_THREADS */
 
 /* Allocator lock definitions.		*/
-#if defined(USE_SPIN_LOCK)
-  pthread_t GC_lock_holder = NO_THREAD;
-#else
+#if !defined(USE_SPIN_LOCK)
   pthread_mutex_t GC_allocate_ml = PTHREAD_MUTEX_INITIALIZER;
-  pthread_t GC_lock_holder = NO_THREAD;
+#endif
+unsigned long GC_lock_holder = NO_THREAD;
 		/* Used only for assertions, and to prevent	 */
 		/* recursive reentry in the system call wrapper. */
-#endif
 
 #if defined(GC_DGUX386_THREADS)
 # include <sys/dg_sys_info.h>
@@ -374,7 +372,7 @@ static struct GC_Thread_Rep first_thread;
 /* Caller holds allocation lock.					*/
 GC_thread GC_new_thread(pthread_t id)
 {
-    int hv = ((word)id) % THREAD_TABLE_SZ;
+    int hv = NUMERIC_THREAD_ID(id) % THREAD_TABLE_SZ;
     GC_thread result;
     static GC_bool first_thread_used = FALSE;
     
@@ -399,12 +397,12 @@ GC_thread GC_new_thread(pthread_t id)
 /* (The code intentionally traps if it wasn't.)			*/
 void GC_delete_thread(pthread_t id)
 {
-    int hv = ((word)id) % THREAD_TABLE_SZ;
+    int hv = NUMERIC_THREAD_ID(id) % THREAD_TABLE_SZ;
     register GC_thread p = GC_threads[hv];
     register GC_thread prev = 0;
     
     GC_ASSERT(I_HOLD_LOCK());
-    while (!pthread_equal(p -> id, id)) {
+    while (!THREAD_EQUAL(p -> id, id)) {
         prev = p;
         p = p -> next;
     }
@@ -426,7 +424,7 @@ void GC_delete_thread(pthread_t id)
 void GC_delete_gc_thread(GC_thread gc_id)
 {
     pthread_t id = gc_id -> id;
-    int hv = ((word)id) % THREAD_TABLE_SZ;
+    int hv = NUMERIC_THREAD_ID(id) % THREAD_TABLE_SZ;
     register GC_thread p = GC_threads[hv];
     register GC_thread prev = 0;
 
@@ -454,10 +452,10 @@ void GC_delete_gc_thread(GC_thread gc_id)
 /* return the most recent one.					*/
 GC_thread GC_lookup_thread(pthread_t id)
 {
-    int hv = ((word)id) % THREAD_TABLE_SZ;
+    int hv = NUMERIC_THREAD_ID(id) % THREAD_TABLE_SZ;
     register GC_thread p = GC_threads[hv];
     
-    while (p != 0 && !pthread_equal(p -> id, id)) p = p -> next;
+    while (p != 0 && !THREAD_EQUAL(p -> id, id)) p = p -> next;
     return(p);
 }
 
@@ -476,7 +474,7 @@ void GC_remove_all_threads_but_me(void)
       me = 0;
       for (p = GC_threads[hv]; 0 != p; p = next) {
 	next = p -> next;
-	if (p -> id == self) {
+	if (THREAD_EQUAL(p -> id, self)) {
 	  me = p;
 	  p -> next = 0;
 	} else {
@@ -1205,35 +1203,6 @@ WRAP_FUNC(pthread_create)(pthread_t *new_thread,
     return(result);
 }
 
-#ifdef GENERIC_COMPARE_AND_SWAP
-  pthread_mutex_t GC_compare_and_swap_lock = PTHREAD_MUTEX_INITIALIZER;
-
-  GC_bool GC_compare_and_exchange(volatile GC_word *addr,
-  			          GC_word old, GC_word new_val)
-  {
-    GC_bool result;
-    pthread_mutex_lock(&GC_compare_and_swap_lock);
-    if (*addr == old) {
-      *addr = new_val;
-      result = TRUE;
-    } else {
-      result = FALSE;
-    }
-    pthread_mutex_unlock(&GC_compare_and_swap_lock);
-    return result;
-  }
-  
-  GC_word GC_atomic_add(volatile GC_word *addr, GC_word how_much)
-  {
-    GC_word old;
-    pthread_mutex_lock(&GC_compare_and_swap_lock);
-    old = *addr;
-    *addr = old + how_much;
-    pthread_mutex_unlock(&GC_compare_and_swap_lock);
-    return old;
-  }
-
-#endif /* GENERIC_COMPARE_AND_SWAP */
 /* Spend a few cycles in a way that can't introduce contention with	*/
 /* othre threads.							*/
 void GC_pause(void)
@@ -1412,7 +1381,7 @@ void GC_lock(void)
 #if defined(PARALLEL_MARK) || defined(THREAD_LOCAL_ALLOC)
 
 #ifdef GC_ASSERTIONS
-  pthread_t GC_mark_lock_holder = NO_THREAD;
+  unsigned long GC_mark_lock_holder = NO_THREAD;
 #endif
 
 #if 0
@@ -1440,13 +1409,13 @@ void GC_acquire_mark_lock(void)
 */
     GC_generic_lock(&mark_mutex);
 #   ifdef GC_ASSERTIONS
-	GC_mark_lock_holder = pthread_self();
+	GC_mark_lock_holder = NUMERIC_THREAD_ID(pthread_self());
 #   endif
 }
 
 void GC_release_mark_lock(void)
 {
-    GC_ASSERT(GC_mark_lock_holder == pthread_self());
+    GC_ASSERT(GC_mark_lock_holder == NUMERIC_THREAD_ID(pthread_self()));
 #   ifdef GC_ASSERTIONS
 	GC_mark_lock_holder = NO_THREAD;
 #   endif
@@ -1462,7 +1431,7 @@ void GC_release_mark_lock(void)
 /*    free-list link may be ignored.					*/
 void GC_wait_builder(void)
 {
-    GC_ASSERT(GC_mark_lock_holder == pthread_self());
+    GC_ASSERT(GC_mark_lock_holder == NUMERIC_THREAD_ID(pthread_self()));
 #   ifdef GC_ASSERTIONS
 	GC_mark_lock_holder = NO_THREAD;
 #   endif
@@ -1471,7 +1440,7 @@ void GC_wait_builder(void)
     }
     GC_ASSERT(GC_mark_lock_holder == NO_THREAD);
 #   ifdef GC_ASSERTIONS
-	GC_mark_lock_holder = pthread_self();
+	GC_mark_lock_holder = NUMERIC_THREAD_ID(pthread_self());
 #   endif
 }
 
@@ -1486,7 +1455,7 @@ void GC_wait_for_reclaim(void)
 
 void GC_notify_all_builder(void)
 {
-    GC_ASSERT(GC_mark_lock_holder == pthread_self());
+    GC_ASSERT(GC_mark_lock_holder == NUMERIC_THREAD_ID(pthread_self()));
     if (pthread_cond_broadcast(&builder_cv) != 0) {
 	ABORT("pthread_cond_broadcast failed");
     }
@@ -1500,7 +1469,7 @@ static pthread_cond_t mark_cv = PTHREAD_COND_INITIALIZER;
 
 void GC_wait_marker(void)
 {
-    GC_ASSERT(GC_mark_lock_holder == pthread_self());
+    GC_ASSERT(GC_mark_lock_holder == NUMERIC_THREAD_ID(pthread_self()));
 #   ifdef GC_ASSERTIONS
 	GC_mark_lock_holder = NO_THREAD;
 #   endif
@@ -1509,7 +1478,7 @@ void GC_wait_marker(void)
     }
     GC_ASSERT(GC_mark_lock_holder == NO_THREAD);
 #   ifdef GC_ASSERTIONS
-	GC_mark_lock_holder = pthread_self();
+	GC_mark_lock_holder = NUMERIC_THREAD_ID(pthread_self());
 #   endif
 }
 
